Try to route all requests to new upstream orakwlum_frontend
To integrate react-routing and enforced url routing

--- a/volumes/nginx/conf.d/frontend.conf
+++ b/volumes/nginx/conf.d/frontend.conf
@@ -1,4 +1,13 @@
 server {
     listen                  80;
     root                    /usr/share/nginx/html;
+
+    index index.html index.htm;
+
+    ## Frontend resource
+    location @orakwlum-frontend {
+        try_files $uri $uri/ /index.html;
+    }
+
+    location / { try_files $uri @orakwlum-frontend; }
 }
