Handle static-content (images, robots, favicon)

--- a/volumes/nginx/conf.d/frontend.conf
+++ b/volumes/nginx/conf.d/frontend.conf
@@ -9,5 +9,13 @@ server {
         try_files $uri $uri/ /index.html;
     }
 
+    ## Static content (images, icons, txt)
+    location ~ ^/(images|robots.txt|favicon.ico) {
+        try_files /public/$uri =404;
+        error_page 403 404 = @orakwlum-frontend;
+        access_log off;
+        expires max;
+    }
+
     location / { try_files $uri @orakwlum-frontend; }
 }
