Enforce CSS are returned as CSS mime

--- a/volumes/nginx/conf.d/frontend.conf
+++ b/volumes/nginx/conf.d/frontend.conf
@@ -17,5 +17,11 @@ server {
         expires max;
     }
 
+    ## Handle CSS
+    location ~ \.css {
+        add_header Content-Type text/css;
+        try_files $uri @orakwlum-dev;
+    }
+
     location / { try_files $uri @orakwlum-frontend; }
 }
