--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,6 @@ services:
     volumes:
       - ./volumes/frontend:/orakwlum
 
-
   frontend-nginx:
     restart: always
     image: nginx
@@ -22,6 +21,13 @@ services:
       - VIRTUAL_PORT=80
       - LETSENCRYPT_HOST=som.okw.gisce.net
       - LETSENCRYPT_EMAIL=xtorello@gisce.net
+
+  api:
+    image: api
+    build: ./services/api
+    container_name: frontend-api
+    volumes:
+      - ./volumes/api:/opt/orakWlum-api
 
   nginx:
     restart: always
