--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,9 +25,12 @@ services:
   api:
     image: api
     build: ./services/api
-    container_name: frontend-api
+    container_name: api
     volumes:
       - ./volumes/api:/opt/orakWlum-api
+    environment:
+      - VIRTUAL_NETWORK=nginx-proxy
+      - VIRTUAL_PORT=5000
 
   nginx:
     restart: always
