Simplify api image creation

--- a/services/api/Dockerfile
+++ b/services/api/Dockerfile
@@ -33,11 +33,4 @@ RUN pip install -r /opt/orakWlum-api/requirements-dev.txt
 # Ensure py-bcrypt is not corrupted by flask
 RUN pip uninstall -y py-bcrypt && pip install py-bcrypt
 
-# "Set Environment Vars"
-ENV PATHH=/opt/orakWlum-api PROCESSES=20 SOCKET="-s /tmp/orakwlum-api.sock"
-
-#EXPOSE 5000
-
-# Run the API! when starting the container
-RUN chmod +x /opt/orakWlum-api/utils/start_api_server.sh
-CMD /opt/orakWlum-api/utils/start_api_server.sh
+CMD uwsgi --ini /opt/orakWlum-api/config/api.ini
