Fix all needed upstreams for frontend nginx

--- a/volumes/nginx/conf.d/frontend.conf
+++ b/volumes/nginx/conf.d/frontend.conf
@@ -5,14 +5,29 @@ server {
     index index.html index.htm;
 
     ## Frontend resource
-    location @orakwlum-frontend {
+    location @frontend {
         try_files $uri $uri/ /index.html;
+    }
+
+    ## API resource by port
+    location @api {
+        proxy_pass http://api:5000;
+        #proxy_next_upstream error timeout invalid_header http_500 http_502 http_503 http_504;
+        #proxy_redirect off;
+        proxy_read_timeout      30;
+        proxy_connect_timeout   30;
+        proxy_send_timeout      30;
+        send_timeout            30;
+
+        #add_header Access-Control-Allow-Origin "http://$HOST_NAME";
+        add_header Access-Control-Allow-Methods "GET, POST, PUT, OPTIONS";
+        add_header Access-Control-Allow-Headers: "Authorization, Origin, X-Requested-With, Content-Type, Accept";
     }
 
     ## Static content (images, icons, txt)
     location ~ ^/(images|robots.txt|favicon.ico) {
         try_files /public/$uri =404;
-        error_page 403 404 = @orakwlum-frontend;
+        error_page 403 404 = @frontend;
         access_log off;
         expires max;
     }
@@ -20,7 +35,7 @@ server {
     ## Handle CSS
     location ~ \.css {
         add_header Content-Type text/css;
-        try_files $uri @orakwlum-dev;
+        try_files $uri @frontend;
     }
 
     ## Handle SW without caching
@@ -31,8 +46,21 @@ server {
         expires -1; # immediately expire this file
         add_header Cache-Control "max-age=0, no-cache, no-store, must-revalidate";
 
-        try_files $uri @orakwlum-dev;
+        try_files $uri @frontend;
     }
 
-    location / { try_files $uri @orakwlum-frontend; }
+    ## /socket.io location for websocket communication
+    location /socket.io {
+        proxy_http_version 1.1;
+        proxy_buffering off;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "Upgrade";
+        try_files $uri @api;
+    }
+
+    ## /api location
+    location /api { try_files $uri @api; }
+
+    ## / location
+    location / { try_files $uri @frontend; }
 }
