Mount api config.py and config/app.ini overriding default
To provide a simply way to change the config without recreating the image

The image will just handle the code version, the configs will be outside

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,6 +29,8 @@ services:
     container_name: api
     volumes:
       - ./volumes/api:/opt/orakWlum-api
+      - ./services/api/api.ini:/opt/orakWlum-api/config/api.ini
+      - ./services/api/config.py:/opt/orakWlum-api/config.py
       - ./volumes/logs/api:/var/log/orakwlum/
 
   mongodb:
