Reorder composition to ensure avoid bugs at creation time
Depending on Docker version it can be traumatic if the order is not the expected one...

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,71 @@
 version: "2"
 
 services:
+
+  ##########################
+  ### The main webserver ###
+  ##########################
+
+  nginx:
+    restart: always
+    image: nginx
+    container_name: nginx
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - "/etc/nginx/conf.d"
+      - "/etc/nginx/vhost.d"
+      - "/usr/share/nginx/html"
+      - "./volumes/nginx/certs:/etc/nginx/certs:ro"
+
+
+  ##################################
+  ### The nginx config generator ###
+  ##################################
+
+  nginx-gen:
+    image: jwilder/docker-gen
+    container_name: nginx-gen
+    volumes:
+      - "/var/run/docker.sock:/tmp/docker.sock:ro"
+      - "./volumes/nginx/templates/nginx.tmpl:/etc/docker-gen/templates/nginx.tmpl:ro"
+    volumes_from:
+      - nginx
+    entrypoint: /usr/local/bin/docker-gen -notify-sighup nginx -watch -wait 5s:30s /etc/docker-gen/templates/nginx.tmpl /etc/nginx/conf.d/default.conf
+
+
+  ##################################
+  ### The letsencrypt management ###
+  ##################################
+
+  letsencrypt-nginx-proxy-companion:
+    image: jrcs/letsencrypt-nginx-proxy-companion
+    container_name: letsencrypt-nginx-proxy-companion
+    volumes_from:
+      - nginx
+    volumes:
+      - "/var/run/docker.sock:/var/run/docker.sock:ro"
+      - "./volumes/nginx/certs:/etc/nginx/certs:rw"
+    environment:
+      - NGINX_DOCKER_GEN_CONTAINER=nginx-gen
+
+
+  #########################################
+  ### The Frontend NodeJS compiled code ###
+  #########################################
+
   frontend-src:
     image: frontend-src
     build: ./services/frontend
     container_name: frontend-src
     volumes:
       - ./volumes/frontend:/orakwlum
+
+
+  ###############################
+  ### The Frontend web server ###
+  ###############################
 
   frontend:
     restart: always
@@ -22,6 +81,11 @@ services:
       - LETSENCRYPT_HOST=som.okw.gisce.net
       - LETSENCRYPT_EMAIL=xtorello@gisce.net
 
+
+  ###############
+  ### The API ###
+  ###############
+
   api:
     restart: always
     image: api
@@ -33,6 +97,11 @@ services:
       - ./services/api/config.py:/opt/orakWlum-api/config.py
       - ./volumes/logs/api:/var/log/orakwlum/
 
+
+  ##############
+  ### The DB ###
+  ##############
+
   mongodb:
     restart: always
     image: mongo
@@ -41,6 +110,11 @@ services:
       - ./volumes/logs/mongodb:/var/log/mongodb
       - ./volumes/mongodb:/var/lib/mongodb
 
+
+  #################
+  ### The Redis ###
+  #################
+
   redis:
     restart: always
     image: redis:alpine
@@ -48,36 +122,3 @@ services:
     volumes:
       - ./volumes/logs/redis:/var/log/redis
 
-  nginx:
-    restart: always
-    image: nginx
-    container_name: nginx
-    ports:
-      - "80:80"
-      - "443:443"
-    volumes:
-      - "/etc/nginx/conf.d"
-      - "/etc/nginx/vhost.d"
-      - "/usr/share/nginx/html"
-      - "./volumes/nginx/certs:/etc/nginx/certs:ro"
-
-  nginx-gen:
-    image: jwilder/docker-gen
-    container_name: nginx-gen
-    volumes:
-      - "/var/run/docker.sock:/tmp/docker.sock:ro"
-      - "./volumes/nginx/templates/nginx.tmpl:/etc/docker-gen/templates/nginx.tmpl:ro"
-    volumes_from:
-      - nginx
-    entrypoint: /usr/local/bin/docker-gen -notify-sighup nginx -watch -wait 5s:30s /etc/docker-gen/templates/nginx.tmpl /etc/nginx/conf.d/default.conf
-
-  letsencrypt-nginx-proxy-companion:
-    image: jrcs/letsencrypt-nginx-proxy-companion
-    container_name: letsencrypt-nginx-proxy-companion
-    volumes_from:
-      - nginx
-    volumes:
-      - "/var/run/docker.sock:/var/run/docker.sock:ro"
-      - "./volumes/nginx/certs:/etc/nginx/certs:rw"
-    environment:
-      - NGINX_DOCKER_GEN_CONTAINER=nginx-gen
