Fix mongodb DB path at composition

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -108,7 +108,7 @@ services:
     container_name: mongodb
     volumes:
       - ./volumes/logs/mongodb:/var/log/mongodb
-      - ./volumes/mongodb:/var/lib/mongodb
+      - ./volumes/mongodb:/data/db/
 
 
   #################
