Add build contexts with version for API
Also disables the integration of own code

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -89,10 +89,14 @@ services:
   api:
     restart: always
     image: api
-    build: ./services/api
+    build: 
+      context: ./services/api
+      args:
+        - ORAKWLUM_API_VERSION=v0.13.4a
+
     container_name: api
     volumes:
-      - ./volumes/api:/opt/orakWlum-api
+      #- ./volumes/api:/opt/orakWlum-api
       - ./services/api/api.ini:/opt/orakWlum-api/config/api.ini
       - ./services/api/config.py:/opt/orakWlum-api/config.py
       - ./volumes/logs/api:/var/log/orakwlum/
