Add build context for frontend with version handling

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,7 +57,10 @@ services:
 
   frontend-src:
     image: frontend-src
-    build: ./services/frontend
+    build: 
+      context: ./services/frontend
+      args:
+        - ORAKWLUM_API_VERSION=v0.13.10a
     container_name: frontend-src
     volumes:
       - ./volumes/frontend:/orakwlum
