--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -78,11 +78,11 @@ services:
       - ./volumes/frontend/www:/usr/share/nginx/html:ro
       - ./volumes/nginx/conf.d/:/etc/nginx/conf.d
     environment:
-      - VIRTUAL_HOST=som.testing.okw.gisce.net
+      - VIRTUAL_HOST=${DOMAIN}
       - VIRTUAL_NETWORK=nginx-proxy
       - VIRTUAL_PORT=80
-      - LETSENCRYPT_HOST=som.testing.okw.gisce.net
-      - LETSENCRYPT_EMAIL=xtorello@gisce.net
+      - LETSENCRYPT_HOST=${DOMAIN}
+      - LETSENCRYPT_EMAIL=${ADMIN_EMAIL}
 
 
   ###############
