--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
+FRONTEND_VERSION=v0.13.10a
 API_VERSION=v0.13
 DOMAIN=som.testing.okw.gisce.net
-ADMIN_EMAI=xtorello@gisce.net
+ADMIN_EMAIL=xtorello@gisce.net
