--- a/services/worker-base/Dockerfile
+++ b/services/worker-base/Dockerfile
@@ -1,4 +1,4 @@
-FROM python:3.6-alpine3.6
+FROM python:3.6-slim-jessie
 ARG ORAKWLUM_VERSION=master
 
 RUN # "=========Installing oraKWlum API v$ORAKWLUM_API_VERSION=========="
@@ -7,6 +7,7 @@ RUN # "=========Installing oraKWlum API v$ORAKWLUM_API_VERSION=========="
 RUN apt-get update && apt-get install -y --no-install-recommends\
     ssh \
     git \
+    build-essential \
     && rm -rf /var/lib/apt/lists/*
 
 # Add required SSH pubkey from HOST
@@ -20,7 +21,7 @@ RUN ssh-keyscan -t rsa github.com > /root/.ssh/known_hosts
 
 # Clone repository
 WORKDIR /opt
-RUN git clone -b $ORAKWLUM_API_VERSION --depth 1 git@github.com:gisce/orakWlum.git 
+RUN git clone -b $ORAKWLUM_VERSION --depth 1 git@github.com:gisce/orakWlum.git 
 
 # Delete ssh key
 RUN rm /root/.ssh/id_rsa*
