--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -128,21 +128,21 @@ services:
       - ./logs/api:/var/log/orakwlum/
 
 
-  #######################
-  ### StaticData worker #
-  #######################
+  ##################
+  ### okW worker ###
+  ##################
 
-  worker-static:
+  okw-worker:
     restart: always
-    image: okw/worker-static:${OKW_VERSION}
+    image: okw/okw-worker:${OKW_VERSION}
     build:
-      context: ./services/worker-staticData
+      context: ./services/okw-worker
       args:
         - ORAKWLUM_VERSION=${OKW_VERSION}
     depends_on:
       - mongodb
       - redis
-    container_name: worker-static
+    container_name: okw-worker
     volumes:
       #- ./volumes/api:/opt/orakWlum-api
       - ./config/api/config.py:/opt/orakWlum-api/config.py
@@ -174,23 +174,4 @@ services:
     container_name: redis
     volumes:
       - ./logs/redis:/var/log/redis
-
-
-
-
-
-  #################
-  ### Auxiliar ct #
-  #################
-
-  # This will ensure that the latest worker-base image is the one with the current defined TAG
-  worker-base:
-    image: okw/worker-base
-    container_name: worker-base
-    build:
-      context: ./services/worker-base
-      args:
-        - ORAKWLUM_VERSION=${OKW_VERSION}
-
-
 
