--- a/.env
+++ b/.env
@@ -1,5 +1,10 @@
 OKW_VERSION=v0.8.0a
 FRONTEND_VERSION=v0.13.10a
 API_VERSION=v0.13
+
+OKW_WORKERS=6
+
 DOMAIN=som.testing.okw.gisce.net
 ADMIN_EMAIL=xtorello@gisce.net
+
+
