--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -142,7 +142,8 @@ services:
     depends_on:
       - mongodb
       - redis
-    container_name: okw-worker
+    #container_name: okw-worker
+    #scale: ${OKW_WORKERS}
     volumes:
       #- ./volumes/api:/opt/orakWlum-api
       - ./config/api/config.py:/opt/orakWlum-api/config.py
