Avoid logging to file to integrate logs at docker-compose

--- a/config/api/api.ini
+++ b/config/api/api.ini
@@ -10,5 +10,5 @@ chdir = /opt/orakWlum-api
 mount = /=manage.py
 callable = app
 thunder-lock = true
-logto = /var/log/orakwlum/orakW.log
 uid = 1000
+#logto = /var/log/orakwlum/orakW.log
