--- a/config/frontend/frontend.conf
+++ b/config/frontend/frontend.conf
@@ -49,14 +49,15 @@ server {
         try_files $uri @frontend;
     }
 
+    ## Handled at access layer
     ## /socket.io location for websocket communication
-    location /socket.io {
-        proxy_http_version 1.1;
-        proxy_buffering off;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "Upgrade";
-        try_files $uri @api;
-    }
+    #location /socket.io {
+    #    proxy_http_version 1.1;
+    #    proxy_buffering off;
+    #    proxy_set_header Upgrade $http_upgrade;
+    #    proxy_set_header Connection "Upgrade";
+    #    try_files $uri @api;
+    #}
 
     ## /api location
     location /api { try_files $uri @api; }
