--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -74,9 +74,11 @@ services:
     restart: always
     image: nginx
     container_name: frontend
+    depends_on:
+      - api
     volumes:
       - ./volumes/frontend/www:/usr/share/nginx/html:ro
-      - ./config/frontend/frontend.conf:/etc/nginx/conf.d/frontend.conf
+      - ./config/frontend/frontend.conf:/etc/nginx/conf.d/default.conf
     environment:
       - VIRTUAL_HOST=${DOMAIN}
       - VIRTUAL_NETWORK=nginx-proxy
@@ -105,6 +107,8 @@ services:
       - ./config/api/api.ini:/opt/orakWlum-api/config/api.ini
       - ./config/api/config.py:/opt/orakWlum-api/config.py
       - ./logs/api:/var/log/orakwlum/
+    environment:
+      - VIRTUAL_NETWORK=nginx-proxy
 
 
   ######################
