--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -165,6 +165,8 @@ services:
     restart: always
     image: mongo
     container_name: mongodb
+    ports:
+      - "27017:27017"
     volumes:
       - ./logs/mongodb:/var/log/mongodb
       - ./volumes/mongodb:/data/db/
