Add development server start script at build time

--- a/services/api-devel/Dockerfile
+++ b/services/api-devel/Dockerfile
@@ -4,4 +4,7 @@ ARG ORAKWLUM_API_VERSION=master
 RUN apt update && apt install -y vim 
 
 WORKDIR /opt/orakWlum-api
+
+RUN echo "uwsgi --ini config/api.ini --py-autoreload" > start.sh
+
 CMD bash
