--- a/services/api-devel/Dockerfile
+++ b/services/api-devel/Dockerfile
@@ -1,10 +1,13 @@
 FROM okw/api
 ARG ORAKWLUM_API_VERSION=master
+ARG ESIOS_TOKEN=none
 
-RUN apt update && apt install -y vim 
+ENV ESIOS_TOKEN=$ESIOS_TOKEN
+
+RUN apt update && apt install -y vim telnet mongodb-clients iputils-ping
 
 WORKDIR /opt/orakWlum-api
 
-RUN echo "uwsgi --ini config/api.ini --py-autoreload" > start.sh
+RUN echo "uwsgi --ini config/api.ini --py-autoreload 1" > start.sh
 
 CMD bash
