Patch consumptions uwsgi config

--- a/config/frontend/frontend.conf
+++ b/config/frontend/frontend.conf
@@ -24,6 +24,19 @@ server {
         add_header Access-Control-Allow-Headers: "Authorization, Origin, X-Requested-With, Content-Type, Accept";
     }
 
+    ## API resource with extended timeout for huge cost operations
+    location @orakwlum-api-ht {
+        include uwsgi_params;
+        uwsgi_pass api:5000;
+        uwsgi_read_timeout      1200;
+        uwsgi_connect_timeout   1200;
+        uwsgi_send_timeout      1200;        
+
+        #add_header Access-Control-Allow-Origin "http://$HOST_NAME";
+        add_header Access-Control-Allow-Methods "GET, POST, PUT, OPTIONS";
+        add_header Access-Control-Allow-Headers: "Authorization, Origin, X-Requested-With, Content-Type, Accept";
+    }
+
     ## Static content (images, icons, txt)
     location ~ ^/(images|robots.txt|favicon.ico) {
         try_files /public/$uri =404;
@@ -58,6 +71,11 @@ server {
     #    proxy_set_header Connection "Upgrade";
     #    try_files $uri @api;
     #}
+
+    ## /api consumptions location
+    location /api/v1/consumptions { 
+        try_files $uri @orakwlum-api-ht;
+    }
 
     ## /api location
     location /api { try_files $uri @api; }
