Override start_worker.sh script at api-worker build

--- a/services/api-worker/Dockerfile
+++ b/services/api-worker/Dockerfile
@@ -2,5 +2,6 @@ FROM okw/api
 ARG ORAKWLUM_API_VERSION=master
 
 WORKDIR /opt/orakWlum-api
+ADD start_worker.sh /opt/orakWlum-api/utils/start_worker.sh
 RUN chmod +x /opt/orakWlum-api/utils/start_worker.sh
 CMD /opt/orakWlum-api/utils/start_worker.sh
